fix(themes): add missing color and fix dark theme

--- a/src/global.scss
+++ b/src/global.scss
@@ -33,3 +33,9 @@
  */
 
 @import "./app/app.scss";
+
+
+// TODO remove once fixed in framework
+.ios .header-collapse-condense ion-toolbar {
+  --background: var(--ion-background-color, #fff);
+}
